IT tests (#28)
- IT tests
- Skip mutation tests for `executable` module
- Fix Workflow badge